--- a/native/src/cmake/SEALConfig.cmake.in
+++ b/native/src/cmake/SEALConfig.cmake.in
@@ -48,9 +48,11 @@ set(SEAL_LIB_BUILD_TYPE @SEAL_LIB_BUILD_TYPE@)
 set(SEAL_USE_CXX17 @SEAL_USE_CXX17@)
 set(SEAL_ENFORCE_HE_STD_SECURITY @SEAL_ENFORCE_HE_STD_SECURITY@)
 
+# Add the current directory to the module search path
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
+
 set(SEAL_USE_MSGSL @SEAL_USE_MSGSL@)
 if(SEAL_USE_MSGSL)
-    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
     find_seal_dependency(MSGSL)
 endif()
 
